Mini_MenuPanels Changelog
*************************

7.x-1.x-dev
***********

* Initial port to Drupal 7.
* Changed the module to load the QTip script from sites/all/libraries.
* Small optimization - split the JS into two files so less code is loaded for
  most page views.
* Don't continue trying to load the menus if the qTip JS file has not been
  installed.
* If no Mini Panels are available, show a message on the menu admin page.


6.x-1.x, 2010-10-17
*******************

* Improved code as a result of a code review by @kiamlaluno.
* Final style tweaks to prepare for cvs commit to drupal.org.

6.x-1.x, 2010-08-15
*******************

* First releasable version of the module.
* All sensible qTip configuration parameters implemented.